# pet_projects_and_education

./: README.md
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/: .gitignore  CMakeLists.txt  image-transformer  test_1  test_2  test_3  test_4  test_5  test_6
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/Testing/Temporary/: CTestCostData.txt
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/include/: constants.h  rotate_image.h
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/include/files_handling/: file_utilities.h  opened_file_to_struct_image.h  struct_image_to_opened_file.h
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/include/image/: image.h  pixel.h
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/include/image/bmp/: bmp_header.h  bmp_header_constants.h  bmp_utilities.h
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/include/image/rotation/: struct_image_rotation.h
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/include/output_messages/: output_message_printer.h
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/include/test/: image_rotation_tester.h
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/solution/include/: constants.h  rotate_image.h
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/solution/include/files_handling/: file_utilities.h  opened_file_to_struct_image.h  struct_image_to_opened_file.h
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/solution/include/image/: image.h  image_file_formats.h
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/solution/src/: constants.c  main.c  rotate_image.c
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/src/: constants.c  main.c  rotate_image.c
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/src/files_handling/: file_utilities.c  opened_file_to_struct_image.c  struct_image_to_opened_file.c
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/src/image/: image.c
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/src/output_messages/: output_message_printer.c
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/src/test/: image_rotation_tester.c
pet_projects/zhirkov_low_level_programming_assignments/image_rotation/tester/: test_image_1_rotation.c  test_image_2_rotation.c  test_image_3_rotation.c  test_image_4_rotation.c  test_image_5_rotation.c  test_image_6_rotation.c
(+16 files in other folders)
